--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -2,6 +2,7 @@
 Маркиев Владимир <grolribasi@gmail.com>
 :hide-uri-scheme:
 https://www.vladimir-markiev.name
+:imagesdir: ./img
 
 
 . Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
