why imagesdir not working?

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -1,10 +1,9 @@
 = Как купить билет на сайте РЖД
 Маркиев Владимир <grolribasi@gmail.com>
 :hide-uri-scheme:
-https://www.vladimir-markiev.name
 :imagesdir: img
 
 
 . Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
-image::1.png[Главная страница]
+image::img/1.png[Главная страница]
 . В поле *"Откуда"* выберите 
