heck, website was interfering

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -6,6 +6,6 @@
 
 . Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 
-image::img/1.png[Главная страница]
+image::1.png[Главная страница]
 
 . В поле *"Откуда"* выберите 
