--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -8,4 +8,6 @@
 
 image::1.png[Главная страница]
 
-. В поле *"Откуда"* выберите 
+. В поле *"Откуда"* введите город отправления.
+image::2.png[Город отправления]
+
