--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -8,7 +8,8 @@
 
 image::1.png[Главная страница]
 
-.. В поле *"Откуда"* введите город отправления.
++
+. В поле *"Откуда"* введите город отправления.
 
 image::2.png[Город отправления]
 
