--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -10,8 +10,47 @@
 image::1.png[Главная страница]
 --
 +
-. В поле *"Откуда"* введите город отправления.
+. В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
 +
 --
 image::2.png[Город отправления]
++
+--
+. Повторите действия с полем *"Куда"*
+image::3.png[Город прибытия]
++
+--
+. Выберите дату отправления и возвращения в полях *"Туда"* и *"Обратно"*, а затем нажмите кнопку *"Найти"*.
++
+--
+image::5.png[Даты поездки]
++
+--
+. На следующей странице вы увидите доступные отправления до пункта назначения.
++
+--
+image::4.png[Сортировка и фильтры]
++
+В верхней части страницы вы можете отсортировать доступные отправления:
++
+--
+* По времени отправления
+* По времени прибытия
+* По стоимости
+* По времени в пути
++
+--
+В левой части страницы вы можете настроить фильтры:
++
+--
+image::6.png[Фильтры]
++
+--
+. Выберите желаемый поезд и нажмите в любом месте на карточку поезда.
+image::7.png[Выбор поезда]
++
+Вы будете перенаправлены на страницу выбора класса обслуживания поезда.
+image::8.png[Класс обслуживания]
+
+
 
