rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -62,6 +62,17 @@ image::8.png[Класс обслуживания]
 --
 +
 . Выберите желаемый класс обслуживания.
++
+--
+image::9.png[Выбор класса обслуживания]
+--
++
+.. Обратите внимание на варианты выбора кресел (если доступно).
++
+--
+image::9.1.png[Выбор кресел]
 
-
+image:9.2.png[Выбор кресел]
+--
++
 
