rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -70,7 +70,7 @@ image::9.png[Выбор класса обслуживания]
 .. Обратите внимание на варианты выбора кресел (если доступно).
 +
 --
-image::9.1.png[Выбор кресел]
+image:9.1.png[Выбор кресел]
 
 image:9.2.png[Выбор кресел]
 --
