rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -71,8 +71,8 @@ image::9.png[Выбор класса обслуживания]
 +
 --
 image:9.1.png[Выбор кресел]
-
 image:9.2.png[Выбор кресел]
 --
 +
+. Выберите места
 
