rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -67,6 +67,7 @@ image::8.png[Класс обслуживания]
 image::9.png[Выбор класса обслуживания]
 --
 +
+[arabic]
 .. Обратите внимание на варианты выбора кресел (если доступно).
 +
 --
