rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -67,7 +67,7 @@ image::8.png[Класс обслуживания]
 image::9.png[Выбор класса обслуживания]
 --
 +
-[arabic, start 9]
+[ah, screw it, i is fine with me]
 .. Обратите внимание на варианты выбора кресел (если доступно).
 +
 --
@@ -75,5 +75,35 @@ image:9.1.png[Выбор кресел]
 image:9.2.png[Выбор кресел]
 --
 +
-. Выберите места
+. Выберите места и вагон (если доступно). Нажмите *"Продолжить"*
++
+--
+image::10.png[Выбор мест и вагона]
+--
++
+.. Если вы не вошли в свою учётную запись, вам потребуется войти под своим логином ил зарегистрироваться.
++
+--
+image::11.png[Логин]
+--
++
+. Выберите пассажира из списка добавленных ранее ил добавьте нового.
++
+--
+image::12.png[Выбор пассажира]
+--
++
+.. Для добавления нового пассажира нажмите *"Новый пассажир"* и заполните все данные на следующей странице. По завершении нажмите *"Добавить"*
++
+--
+image::12.1.png[Новый пассажир]
+--
++
+. Далее вам будет предложено выбрать тариф, оформить заказ с питанием или добавить ребёнка до 5 лет. По завершении нажмите *"К обратной поездке"*
++
+--
+image::13.png[Пассажир добавлен]
+--
++
+. Повторите пункты 5 -- 
 
