rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -1,8 +1,11 @@
 = Как купить билет на сайте РЖД
-Маркиев Владимир <grolribasi@gmail.com>
+Author is {Маркиев Владимир}
+:Email: <grolribasi@gmail.com>
 :hide-uri-scheme:
 :imagesdir: img
 
+
+Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
 
 . Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 +
@@ -93,17 +96,55 @@ image::11.png[Логин]
 image::12.png[Выбор пассажира]
 --
 +
-.. Для добавления нового пассажира нажмите *"Новый пассажир"* и заполните все данные на следующей странице. По завершении нажмите *"Добавить"*
+.. Для добавления нового пассажира нажмите *"Новый пассажир"* и заполните все данные на следующей странице. По завершении нажмите *"Добавить"*.
 +
 --
 image::12.1.png[Новый пассажир]
 --
 +
-. Далее вам будет предложено выбрать тариф, оформить заказ с питанием или добавить ребёнка до 5 лет. По завершении нажмите *"К обратной поездке"*
+. Далее вам будет предложено выбрать тариф, оформить заказ с питанием или добавить ребёнка до 5 лет. По завершении нажмите *"К обратной поездке"*.
 +
 --
 image::13.png[Пассажир добавлен]
 --
 +
-. Повторите пункты 5 -- 
-
+. Повторите пункты 5 -- 10.
+. Проверьте ваш заказ.
+.. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё или добавить ребёнка до 5 лет или выбрать дополнительные поездки.
+... Если вы выбираете дополнительные поездки, пройдите снова пункты 1 -- 12.
+--
++
+image::14.png[Проверка заказа]
+--
++
+. Если всё верно, нажмите *"Оформить заказ"*. Вас попросят указать контактные данные.
++
+--
+image::15.png[Контактные данные]
+--
++
+. Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
++
+IMPORTANT: Вы должны успеть оплатить заказ в отведённое время, иначе бронь мест будет отменена.
++
+--
+image::16.png[Конечная проверка]
+--
++
+. Ознакомьтесь с офертой, подтвердите согласие третьих лиц, нажмите *"Оплатить"*.
++
+--
+image::17.png[Проверка, согласие]
+__
++
+. Вы будете перенаправлены на страницу оплаты. Оплатите ваш заказ.
++
+--
+image::18.png[Оплата]
+--
++
+. После оплаты вы будете перенаправлены на страницу с вашими билетами. Копии билетов будут также отправлены на вашу электронную почту.
+. Вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*
++
+--
+image::19.png[Отмена]
