rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -112,9 +112,11 @@ image::13.png[Пассажир добавлен]
 +
 . Проверьте ваш заказ.
 +
-.. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё или добавить ребёнка до 5 лет или выбрать дополнительные поездки.
+[loweralpha, start=1]
+.. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё, добавить ребёнка до 5 лет или выбрать дополнительные поездки.
 +
-... Если вы выбираете дополнительные поездки, пройдите снова пункты 1 -- 12.
+--
+***Если вы выбираете дополнительные поездки, повторите пункты 1 -- 12.
 +
 --
 image::14.png[Проверка заказа]
@@ -128,7 +130,7 @@ image::15.png[Контактные данные]
 +
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
-IMPORTANT: Вы должны успеть оплатить заказ в отведённое время, иначе бронь мест будет отменена.
+CAUTION: Вы должны успеть оплатить заказ в отведённое время, иначе бронь мест будет отменена.
 +
 --
 image::16.png[Конечная проверка]
@@ -152,3 +154,4 @@ image::18.png[Оплата]
 +
 --
 image::19.png[Отмена]
+--
