rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -112,11 +112,11 @@ image::13.png[Пассажир добавлен]
 +
 . Проверьте ваш заказ.
 +
-[loweralpha, start=1]
+[loweralpha]
 .. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё, добавить ребёнка до 5 лет или выбрать дополнительные поездки.
 +
 --
-***Если вы выбираете дополнительные поездки, повторите пункты 1 -- 12.
+*** Если вы выбираете дополнительные поездки, повторите пункты 1 -- 12.
 +
 --
 image::14.png[Проверка заказа]
@@ -130,7 +130,9 @@ image::15.png[Контактные данные]
 +
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
+--
 CAUTION: Вы должны успеть оплатить заказ в отведённое время, иначе бронь мест будет отменена.
+--
 +
 --
 image::16.png[Конечная проверка]
