rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -132,7 +132,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-CAUTION: Вы должны успеть оплатить заказ в отведённое время, иначе бронь мест будет отменена.
+WARNING: Вы должны успеть оплатить заказ в отведённое время, иначе бронь мест будет отменена.
 --
 +
 --
