rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -3,6 +3,7 @@ Author is {Маркиев Владимир}
 :Email: <grolribasi@gmail.com>
 :hide-uri-scheme:
 :imagesdir: img
+:iconsdir: img
 
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
@@ -132,7 +133,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-WARNING: Вы должны успеть оплатить заказ в отведённое время. 
+image:ic.png[Инфо] Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
 +
