--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -133,7 +133,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-icon:info-circle[Инфо] Вы должны успеть оплатить заказ в отведённое время. 
+icon:fa-info-circle[role="blue"] Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
 +
