rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -3,7 +3,8 @@ Author is {Маркиев Владимир}
 :Email: <grolribasi@gmail.com>
 :hide-uri-scheme:
 :imagesdir: img
-:iconsdir: img
+:icons: font
+-a stylesheet=my.css
 
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
@@ -133,7 +134,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-icon:fa-info-circle[role="blue"] Вы должны успеть оплатить заказ в отведённое время. 
+icon:fas fa-info-circle[role="blue"] Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
 +
