rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -134,7 +134,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-icon:fas fa-info-circle[role="blue"] Вы должны успеть оплатить заказ в отведённое время. 
+NOTE: Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
 +
@@ -156,7 +156,7 @@ image::18.png[Оплата]
 +
 . После оплаты вы будете перенаправлены на страницу с вашими билетами. Копии билетов будут также отправлены на вашу электронную почту.
 +
-. Вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*
+. Вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*.
 +
 --
 image::19.png[Отмена]
