rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -132,7 +132,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-ВНИМАНИЕ!: Вы должны успеть оплатить заказ в отведённое время. 
+ВНИМАНИЕ: Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
 +
