rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -2,7 +2,8 @@
 Author is {Маркиев Владимир}
 :Email: <grolribasi@gmail.com>
 :hide-uri-scheme:
-:imagesdir: img
+:imagesdir: img:
+:icons: font
 
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
@@ -132,7 +133,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-ВНИМАНИЕ: Вы должны успеть оплатить заказ в отведённое время. 
+icon:note[role="blue"] Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
 +
