rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -3,7 +3,7 @@ Author is {Маркиев Владимир}
 :Email: <grolribasi@gmail.com>
 :hide-uri-scheme:
 :imagesdir: img
-:icons: font
+:important-caption: :heavy_exclamation_mark:
 
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
@@ -133,7 +133,7 @@ image::15.png[Контактные данные]
 . Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 +
 --
-icon:note[role="blue"] Вы должны успеть оплатить заказ в отведённое время. 
+IMPORTANT: Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
 +
