--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -3,6 +3,7 @@ Author is {Маркиев Владимир}
 :Email: <grolribasi@gmail.com>
 :hide-uri-scheme:
 :imagesdir: img
+ifdef::env-github[]
 :important-caption: :warning:
 
 
