rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -4,15 +4,24 @@ Author is {Маркиев Владимир}
 :hide-uri-scheme:
 :imagesdir: img
 ifdef::env-github[]
-:important-caption: :warning:
+:importatnt-caption: :warning:
+:source-highlighter: rouge
+endif::env-github[]
 
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
 
+== Зайдите на сайт
+--
++
 . Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 +
 --
 image::1.png[Главная страница]
+--
++
+--
+== Выберите города
 --
 +
 . В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
@@ -72,11 +81,10 @@ image::8.png[Класс обслуживания]
 image::9.png[Выбор класса обслуживания]
 --
 +
-[ah, screw it, i is fine with me]
 .. Обратите внимание на варианты выбора кресел (если доступно).
 +
 --
-image:9.1.png[Выбор кресел]
+image:9.1.png[Выбор кресел] 
 image:9.2.png[Выбор кресел]
 --
 +
