rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -11,19 +11,17 @@ endif::env-github[]
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
 
-== Зайдите на сайт
---
-+
+== Главная страница
+
 . Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 +
 --
 image::1.png[Главная страница]
 --
 +
---
-== Выберите города
---
-+
+
+Откуда / куда
+
 . В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
 +
 --
