rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -7,12 +7,12 @@ ifdef::env-github[]
 :importatnt-caption: :warning:
 :source-highlighter: rouge
 endif::env-github[]
+:sectnums:
 
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
 
 == Главная страница
-
 . Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 +
 --
@@ -20,14 +20,15 @@ image::1.png[Главная страница]
 --
 +
 
-Откуда / куда
-
+== Откуда
 . В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
 +
 --
 image::2.png[Город отправления]
 --
 +
+
+== Куда
 . Повторите действия с полем *"Куда"*
 +
 --
