--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -19,9 +19,8 @@ endif::env-github[]
 image::1.png[Главная страница]
 --
 +
-
 == Откуда
-. В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
+В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
 +
 --
 image::2.png[Город отправления]
@@ -29,7 +28,7 @@ image::2.png[Город отправления]
 +
 
 == Куда
-. Повторите действия с полем *"Куда"*
+Повторите действия с полем *"Куда"*
 +
 --
 image::3.png[Город прибытия]
