rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -13,7 +13,7 @@ endif::env-github[]
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
 
 == Главная страница
-. Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
+Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 +
 --
 image::1.png[Главная страница]
