rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -16,28 +16,22 @@ endif::env-github[]
 Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 --
 image::1.png[Главная страница]
---
 == Откуда
 В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
-+
 --
 image::2.png[Город отправления]
 --
-+
-
 == Куда
 Повторите действия с полем *"Куда"*
-+
 --
 image::3.png[Город прибытия]
 --
-+
-. Выберите дату отправления и возвращения в полях *"Туда"* и *"Обратно"*, а затем нажмите кнопку *"Найти"*.
-+
+== Даты
+Выберите дату отправления и возвращения в полях *"Туда"* и *"Обратно"*, а затем нажмите кнопку *"Найти"*.
 --
 image::5.png[Даты поездки]
 --
-+
+== Доступные отправления
 . На следующей странице вы увидите доступные отправления до пункта назначения.
 +
 --
