rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -29,34 +29,36 @@ image::2.png[Город отправления]
 --
 image::3.png[Город прибытия]
 --
+
 == Даты
 Выберите дату отправления и возвращения в полях *"Туда"* и *"Обратно"*, а затем нажмите кнопку *"Найти"*.
 --
 image::5.png[Даты поездки]
 --
+
 == Доступные отправления
-. На следующей странице вы увидите доступные отправления до пункта назначения.
-+
+На следующей странице вы увидите доступные отправления до пункта назначения.
 --
 image::4.png[Сортировка и фильтры]
 --
-+
+
+=== Сортировка
 В верхней части страницы вы можете отсортировать доступные отправления:
-+
 --
 * По времени отправления
 * По времени прибытия
 * По стоимости
 * По времени в пути
 --
-+
+
+=== Фильтры
 В левой части страницы вы можете настроить фильтры:
-+
 --
 image::6.png[Фильтры]
 --
-+
-. Выберите желаемый поезд и нажмите в любом месте на карточку поезда.
+
+== Выбор поезда
+Выберите желаемый поезд и нажмите в любом месте на карточку поезда.
 +
 --
 image::7.png[Выбор поезда]
