rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -58,109 +58,106 @@ image::6.png[Фильтры]
 --
 
 == Выбор поезда
-Выберите желаемый поезд и нажмите в любом месте на карточку поезда.
+. Выберите желаемый поезд и нажмите в любом месте на карточку поезда.
 +
 --
 image::7.png[Выбор поезда]
 --
 +
-Вы будете перенаправлены на страницу выбора класса обслуживания поезда.
-+
+. Вы будете перенаправлены на страницу выбора класса обслуживания поезда.
 --
 image::8.png[Класс обслуживания]
 --
-+
-. Выберите желаемый класс обслуживания.
-+
+
+== Выбор класса обслуживания
+Выберите желаемый класс обслуживания.
 --
 image::9.png[Выбор класса обслуживания]
 --
-+
-.. Обратите внимание на варианты выбора кресел (если доступно).
-+
+
+=== Выбор типа кресел
+Обратите внимание на варианты выбора типа кресел (если доступно).
 --
 image:9.1.png[Выбор кресел] 
 image:9.2.png[Выбор кресел]
 --
-+
-. Выберите места и вагон (если доступно). Нажмите *"Продолжить"*
-+
+
+== Выбор вагона и места
+Выберите места и вагон (если доступно). Нажмите *"Продолжить"*
 --
 image::10.png[Выбор мест и вагона]
 --
-+
-.. Если вы не вошли в свою учётную запись, вам потребуется войти под своим логином ил зарегистрироваться.
-+
+
+'*_Если вы не вошли в свою учётную запись, вам потребуется войти под своим логином или зарегистрироваться._*'
 --
 image::11.png[Логин]
 --
-+
-. Выберите пассажира из списка добавленных ранее ил добавьте нового.
-+
+
+== Данные пассажира
+Выберите пассажира из списка добавленных ранее ил добавьте нового.
 --
 image::12.png[Выбор пассажира]
 --
-+
-.. Для добавления нового пассажира нажмите *"Новый пассажир"* и заполните все данные на следующей странице. По завершении нажмите *"Добавить"*.
-+
+
+=== Добавление нового пассажира
+Для добавления нового пассажира нажмите *"Новый пассажир"* и заполните все данные на следующей странице. По завершении нажмите *"Добавить"*.
 --
 image::12.1.png[Новый пассажир]
 --
-+
-. Далее вам будет предложено выбрать тариф, оформить заказ с питанием или добавить ребёнка до 5 лет. По завершении нажмите *"К обратной поездке"*.
-+
+
+== Дополнительно
+Далее вам будет предложено выбрать тариф, оформить заказ с питанием или добавить ребёнка до 5 лет. По завершении нажмите *"К обратной поездке"*.
 --
 image::13.png[Пассажир добавлен]
 --
-+
-. Повторите пункты 5 -- 10.
-+
-. Проверьте ваш заказ.
-+
+
+== Обратная поездка
+Повторите пункты 5 -- 10.
+
+== Проверка и подтверждение
+Проверьте ваш заказ.
+
 [loweralpha]
-.. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё, добавить ребёнка до 5 лет или выбрать дополнительные поездки.
+. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё, добавить ребёнка до 5 лет или выбрать дополнительные поездки.
 +
 --
-*** Если вы выбираете дополнительные поездки, повторите пункты 1 -- 12.
---
-+
+[loweraplha]
+. Если вы выбираете дополнительные поездки, повторите пункты 1 -- 12.
 --
 image::14.png[Проверка заказа]
 --
-+
-. Если всё верно, нажмите *"Оформить заказ"*. Вас попросят указать контактные данные.
-+
+== Укажите контактные данные
+Если всё верно, нажмите *"Оформить заказ"*. Вас попросят указать контактные данные.
 --
 image::15.png[Контактные данные]
 --
-+
-. Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
-+
+
+== Проверка билетов
+Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 --
 IMPORTANT: Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
 --
-+
---
 image::16.png[Конечная проверка]
 --
-+
-. Ознакомьтесь с офертой, подтвердите согласие третьих лиц, нажмите *"Оплатить"*.
-+
+
+== Поставьте галочки
+Ознакомьтесь с офертой, подтвердите согласие третьих лиц, нажмите *"Оплатить"*.
 --
 image::17.png[Проверка, согласие]
 --
-+
-. Вы будете перенаправлены на страницу оплаты. Оплатите ваш заказ.
-+
+
+== Оплата билетов
+Вы будете перенаправлены на страницу оплаты. Оплатите ваш заказ.
 --
 image::18.png[Оплата]
 --
-+
-. После оплаты вы будете перенаправлены на страницу с вашими билетами. Копии билетов будут также отправлены на вашу электронную почту.
-+
-. Вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*.
-+
+
+== Скачивание билетов
+После оплаты вы будете перенаправлены на страницу с вашими билетами. Копии билетов будут также отправлены на вашу электронную почту.
+
+== Отмена бронирования
+Вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*.
 --
 image::19.png[Отмена]
 --
