rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -12,31 +12,31 @@ endif::env-github[]
 
 Инструкция:: Данная инструкция поможет вам приобрести билет на сайте https://rzd.ru
 
-== Главная страница
+== Перейдите на сайт
 Наберите в адресной строке браузера rzd.ru, откроется главная страница сайта.
 --
 image::1.png[Главная страница]
 --
 
-== Откуда
+== Заполните "Откуда"
 В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
 --
 image::2.png[Город отправления]
 --
 
-== Куда
+== Заполните "Куда"
 Повторите действия с полем *"Куда"*
 --
 image::3.png[Город прибытия]
 --
 
-== Даты
+== Выберите даты
 Выберите дату отправления и возвращения в полях *"Туда"* и *"Обратно"*, а затем нажмите кнопку *"Найти"*.
 --
 image::5.png[Даты поездки]
 --
 
-== Доступные отправления
+== Выберите время отправления
 На следующей странице вы увидите доступные отправления до пункта назначения.
 --
 image::4.png[Сортировка и фильтры]
@@ -57,44 +57,42 @@ image::4.png[Сортировка и фильтры]
 image::6.png[Фильтры]
 --
 
-== Выбор поезда
+== Выберите поезд
 . Выберите желаемый поезд и нажмите в любом месте на карточку поезда.
-+
 --
 image::7.png[Выбор поезда]
 --
-+
 . Вы будете перенаправлены на страницу выбора класса обслуживания поезда.
 --
 image::8.png[Класс обслуживания]
 --
 
-== Выбор класса обслуживания
+== Выберите класс обслуживания
 Выберите желаемый класс обслуживания.
 --
 image::9.png[Выбор класса обслуживания]
 --
 
-=== Выбор типа кресел
+=== Выберите тип кресел
 Обратите внимание на варианты выбора типа кресел (если доступно).
 --
 image:9.1.png[Выбор кресел] 
 image:9.2.png[Выбор кресел]
 --
 
-== Выбор вагона и места
+== Выберите вагон и места
 Выберите места и вагон (если доступно). Нажмите *"Продолжить"*
 --
 image::10.png[Выбор мест и вагона]
 --
 
-'*_Если вы не вошли в свою учётную запись, вам потребуется войти под своим логином или зарегистрироваться._*'
+`*_Если вы не вошли в свою учётную запись, вам потребуется войти под своим логином или зарегистрироваться._*`
 --
 image::11.png[Логин]
 --
 
-== Данные пассажира
-Выберите пассажира из списка добавленных ранее ил добавьте нового.
+== Укажите данные пассажиров
+Выберите пассажиров из списка добавленных ранее или добавьте нового.
 --
 image::12.png[Выбор пассажира]
 --
@@ -105,23 +103,20 @@ image::12.png[Выбор пассажира]
 image::12.1.png[Новый пассажир]
 --
 
-== Дополнительно
+== Укажите дополнительные детали
 Далее вам будет предложено выбрать тариф, оформить заказ с питанием или добавить ребёнка до 5 лет. По завершении нажмите *"К обратной поездке"*.
 --
 image::13.png[Пассажир добавлен]
 --
 
-== Обратная поездка
+== Оформите обратную поездку
 Повторите пункты 5 -- 10.
 
-== Проверка и подтверждение
-Проверьте ваш заказ.
+== Проверьте бронирование
+Проверьте ваш заказ:
 
 [loweralpha]
 . Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё, добавить ребёнка до 5 лет или выбрать дополнительные поездки.
-+
---
-[loweraplha]
 . Если вы выбираете дополнительные поездки, повторите пункты 1 -- 12.
 --
 image::14.png[Проверка заказа]
@@ -132,7 +127,7 @@ image::14.png[Проверка заказа]
 image::15.png[Контактные данные]
 --
 
-== Проверка билетов
+== Проверьте билеты
 Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
 --
 IMPORTANT: Вы должны успеть оплатить заказ в отведённое время. 
@@ -147,17 +142,17 @@ image::16.png[Конечная проверка]
 image::17.png[Проверка, согласие]
 --
 
-== Оплата билетов
+== Оплатите билеты
 Вы будете перенаправлены на страницу оплаты. Оплатите ваш заказ.
 --
 image::18.png[Оплата]
 --
 
-== Скачивание билетов
+== Скачайте и распечатайте билеты
 После оплаты вы будете перенаправлены на страницу с вашими билетами. Копии билетов будут также отправлены на вашу электронную почту.
 
-== Отмена бронирования
-Вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*.
+== Или отмените бронирование
+Если планы изменились, то вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*.
 --
 image::19.png[Отмена]
 --
