rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -47,61 +47,54 @@ image::4.png[Сортировка и фильтры]
 
 === Фильтры
 В левой части страницы вы можете настроить фильтры:
---
+
 image::6.png[Фильтры]
---
 
 == Выберите поезд
 . Выберите желаемый поезд и нажмите в любом месте на карточку поезда.
++
 --
 image::7.png[Выбор поезда]
 --
++
 . Вы будете перенаправлены на страницу выбора класса обслуживания поезда.
---
+
 image::8.png[Класс обслуживания]
---
 
 == Выберите класс обслуживания
 Выберите желаемый класс обслуживания.
---
+
 image::9.png[Выбор класса обслуживания]
---
 
 === Выберите тип кресел
 Обратите внимание на варианты выбора типа кресел (если доступно).
---
+
 image:9.1.png[Выбор кресел] 
 image:9.2.png[Выбор кресел]
---
 
 == Выберите вагон и места
 Выберите места и вагон (если доступно). Нажмите *"Продолжить"*
---
+
 image::10.png[Выбор мест и вагона]
---
 
 `*_Если вы не вошли в свою учётную запись, вам потребуется войти под своим логином или зарегистрироваться._*`
---
+
 image::11.png[Логин]
---
 
 == Укажите данные пассажиров
 Выберите пассажиров из списка добавленных ранее или добавьте нового.
---
+
 image::12.png[Выбор пассажира]
---
 
 === Добавление нового пассажира
 Для добавления нового пассажира нажмите *"Новый пассажир"* и заполните все данные на следующей странице. По завершении нажмите *"Добавить"*.
---
+
 image::12.1.png[Новый пассажир]
---
 
 == Укажите дополнительные детали
 Далее вам будет предложено выбрать тариф, оформить заказ с питанием или добавить ребёнка до 5 лет. По завершении нажмите *"К обратной поездке"*.
---
+
 image::13.png[Пассажир добавлен]
---
 
 == Оформите обратную поездку
 Повторите пункты 5 -- 10.
@@ -110,43 +103,38 @@ image::13.png[Пассажир добавлен]
 Проверьте ваш заказ:
 
 [loweralpha]
-. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё, добавить ребёнка до 5 лет или выбрать дополнительные поездки.
+. Если вы выбрали плацкарт, укажите, хотите ли вы оплатить постельное бельё, добавить ребёнка до 5 лет.
 . Если вы выбираете дополнительные поездки, повторите пункты 1 -- 12.
---
+
 image::14.png[Проверка заказа]
---
+
 == Укажите контактные данные
 Если всё верно, нажмите *"Оформить заказ"*. Вас попросят указать контактные данные.
---
+
 image::15.png[Контактные данные]
---
 
 == Проверьте билеты
 Ещё раз проверьте билеты, ознакомьтесь с дополнительной информацией на странице.
---
+
 IMPORTANT: Вы должны успеть оплатить заказ в отведённое время. 
 В противном случае бронь мест будет отменена.
---
+
 image::16.png[Конечная проверка]
---
 
 == Поставьте галочки
 Ознакомьтесь с офертой, подтвердите согласие третьих лиц, нажмите *"Оплатить"*.
---
+
 image::17.png[Проверка, согласие]
---
 
 == Оплатите билеты
 Вы будете перенаправлены на страницу оплаты. Оплатите ваш заказ.
---
+
 image::18.png[Оплата]
---
 
 == Скачайте и распечатайте билеты
 После оплаты вы будете перенаправлены на страницу с вашими билетами. Копии билетов будут также отправлены на вашу электронную почту.
 
 == Или отмените бронирование
 Если планы изменились, то вы всегда можете отменить бронирование, нажав *"Отменить бронирование"*.
---
+
 image::19.png[Отмена]
---
