rzd_manual.adoc

--- a/rzd_manual.adoc
+++ b/rzd_manual.adoc
@@ -16,14 +16,14 @@ Author is {Маркиев Владимир}
 image::1.png[Главная страница]
 
 == Заполните "Откуда"
-В поле *"Откуда"* введите город отправления, кликните курсором на нужный вариант.
+В поле *"Откуда"* введите станцию отправления, кликните курсором на нужный вариант.
 
-image::2.png[Город отправления]
+image::2.png[Станция отправления]
 
 == Заполните "Куда"
 Повторите действия с полем *"Куда"*
 
-image::3.png[Город прибытия]
+image::3.png[Станция прибытия]
 
 == Выберите даты
 Выберите дату отправления и возвращения в полях *"Туда"* и *"Обратно"*, а затем нажмите кнопку *"Найти"*.
